--- a/JSSamples/JSOnclick1.html
+++ b/JSSamples/JSOnclick1.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta content="text/html; charset=windows-1252" http-equiv="content-type">
-    <title>JS Onclick</title>
+    <title>JS Onclick update</title>
   </head>
   <body>
     <header>
